location - editable, map zooms to location

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@900&display=swap" rel="stylesheet" />
 
-  <title>Minimal UI Kit</title>
+  <title>Aqar Market</title>
 
   <meta name="description"
-    content="The starting point for your next project with Minimal UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style" />
-  <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" />
+    content="The starting point for your Aqar Market - find your home" />
+  <!-- <meta name="keywords" content="react,material,kit,application,dashboard,admin,template" /> -->
 </head>
 
 <body>
